<resources>
    <string name="app_name">PROFILE</string>
    <string name="name">Wanruedee Manowilaipong</string>
    <string name="nickname">FAHSAI</string>
    <string name="study">ICE 3/2</string>
    <string name="welcome">WELCOME TO LOGIN</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="phone">Telephone</string>
    <string name="welcome1">WELCOME TO YOUR</string>
    <string name="title_activity_fifth">fifth</string>
</resources>
